# task-management-system

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  readme-functionality.md  run_readme.md
backend/: Dockerfile  entrypoint.sh  launch.json  pyproject.toml  run_check.py  run_check2.py  run_server.py  run_wsgi.py  run_wsgi2.py  setup_db.py  setup_pg.py  test_server.py  test_wsgi_direct.py
backend/apps/common/: exceptions.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  throttling.py  utils.py
backend/apps/emails/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/notifications/: admin.py  consumers.py  managers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/organizations/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/projects/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/reports/: managers.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/tasks/: admin.py  filters.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/users/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  local.py  production.py  test.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: setup_db.py
backend/scripts/migrations/emails/: 0001_initial.py
backend/scripts/migrations/notifications/: 0001_initial.py  0002_initial.py
backend/scripts/migrations/organizations/: 0001_initial.py  0002_initial.py  0003_alter_organizationmember_role.py  0004_lowercase_roles.py  0005_team_teammember.py
backend/scripts/migrations/projects/: 0001_initial.py  0002_initial.py  0003_alter_project_status_alter_projectmember_role.py  0004_lowercase_values.py
backend/tests/: conftest.py  factories.py  test_notifications.py  test_organizations.py  test_projects.py  test_reports.py  test_tasks.py  test_users.py
frontend/: Dockerfile  (+4 more)
(+159 files in other folders)
